<resources>
    <string name="app_name">Guidelines</string>
    <string name="txtTitulo">House of Cards</string>
    <string name="txtTemporada">S1:E2</string>
    <string name="icon_comentario">icon-comentario</string>
    <string name="icon_volume">icon volume</string>
    <string name="icon_favorito">icon favorito</string>
    <string name="icon_copy">icon copy</string>
    <string name="tempo">01:00</string>
    <string name="tempoFinal">41:20</string>
</resources>
